W6: Frontend UX - Graph, Timeline, Actions (Scope)
Implemented:
- WorkflowGraph.tsx: React Flow visualization with current state highlighting, allowed/blocked edges, tooltips, layout toggle (elk/dagre)
- TimelinePanel.tsx: MUI Timeline with state history, durations, SLA badges (OK/WARN/BREACH)
- ActionsBar.tsx: Action buttons with lock detection, stale→fresh refresh, 'why not' tooltips
- useElkLayout.ts: ELK.js hierarchical layout hook
- useDagreLayout.ts: Dagre compact layout hook
- Updated Workflow/index.ts: Export new W6 components

Features:
- Current state highlighted (blue border/background)
- Allowed edges (green, animated) vs blocked (gray, static)
- SLA status visualization (checkmark/warning/error icons)
- Read-only mode on workflow lock by another user
- Auto-refresh before action apply (stale→fresh)
- Layout algorithm toggle (hierarchical vs compact)
- Legend for visual indicators

Dependencies:
- @mui/lab for Timeline components
- elkjs v0.11.0 (already installed)
- dagre v0.8.5 (already installed)
- date-fns v2.30.0 (already installed)

Next: W6 Unit Tests (Vitest + RTL)